- Fix with placing cursor with the mouse
- If multiple underlined words are written the spaces between are underlined too now

Reggie, 4.12.1998:
------------------
- When the width of a word is larger than the width of the frame, the kernel
  stays cool and doesn't get confused anymore :-)
- When the frame width < rastX (e.g. because other frame(s) are overlapping so much and the user
  enabled 'runaround') the next line is drawn a bit more down (where we have enough space again)

Reggie, 5.12.1998:
------------------
- Started with tabulators
- Improved Style Templates
- Improved applying/updating Style Templates
- Fixed frame calculations

Reggie, 6.12.1998:
------------------
- More work on tabulators (left aligned tabs work already somehow)
- Fixed a bug with loading/saving docs (now it doesn't crash anymore when loading special objs like pictures)

Reggie, 7.12.1998:
------------------
- More work on left aligned tabs, but there is still a bug 

Reggie, 8.12.1998:
------------------
- added 'jpeg' to the 'All pictures' filter in the file dialog
- Fixed a bug with this "magic first character"
- Using ICON() for loading icons in whole KWord
- Save as works again
- When loading a file the toolbar and rulers are update correctly at the beginning

Reggie, 9.12.1998:
------------------
- Templates are searched in the local kdedir (~/.kde/share/apps/kword/templates) now too
- More work on tabs (started with right aligned tabs)

Reggie, 11.12.1998:
-------------------
- When applying paragraph settings and multiple paragraphs are selected, the settings
  are applied to all selected paragraphs.

Reggie, 12.12.1998:
-------------------
- Improvements with inserting/creating objects

Reggie, 13.12.1998:
-------------------
- More work on right aligned tabs (still not working well...)
- Some fixes

Reggie, 14.12.1998:
-------------------
- Implemented showing of formatting chars
- Showing formatting chars / frame borders is configurable now