@@ -1,0 +1,4 @@
+dtd_DATA = kword.dtd
+
+dtddir = $(kde_datadir)/kword/dtd
+
